methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:10: error: ';' expected but ',' found.
  droite(),avance(2);droite();avance(2)
          ^FlowerPot:27: error: illegal start of simple pattern
  for (int i <- 1 to 4){
             ^FlowerPot:31: error: '<-' expected but '}' found.
}
^